# dead_poet_society

./: .env.default  .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: Dockerfile  shell.nix
api/migrations/2023-03-27-125004_Circle/: down.sql  up.sql
api/migrations/2023-03-27-125223_WriterCircle/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/api/: mod.rs  writer.rs
api/src/api/responses/: mod.rs
api/src/models/: writer.rs
api_edit_rust/: Cargo.toml  Dockerfile  README.md  shell.nix
api_edit_rust/misc/: open-api.yml
api_edit_rust/src/: main.rs
api_edit_rust/src/api/: circle.rs  letter.rs  mod.rs  user.rs  writer.rs
api_edit_rust/src/api/requests/: letter_request.rs  mod.rs  writer_request.rs
api_edit_rust/src/api/responses/: writer_response.rs
api_edit_rust/src/models/: circle.rs  writer.rs  writer_circle.rs
api_edit_rust/src/mqtt/: mod.rs  mqtt_core.rs
api_get_python/: Dockerfile  README.md  main.py  requirements.txt  shell.nix
api_get_python/misc/: open-api.yml
keycloak/: easy-sso.json
migrations/2023-03-26-151605_Writer/: down.sql  up.sql
migrations/2023-03-27-134726_Letter/: down.sql  up.sql
misc/: open-api.yml
nginx/: nginx.conf
nginx/cert/: app.config
src/: main.rs
src/api/: circle.rs  letter.rs  mod.rs  writer.rs
src/api/responses/: circle_response.rs  mod.rs
src/models/: circle.rs  letter.rs  mod.rs  writer.rs  writer_circle.rs
sub_log/: Cargo.toml  Dockerfile  README.md  shell.nix
sub_log/src/: main.rs
