[package]
name = "sub_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde_json = "1"
serde_derive = "1"
bincode = "1.3.3"
rumqttc = "0.21.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
